tests/fixtures/invalid/max_none_float.py
# Cannot call max() with None, Float
x = max(None, 1.0)
